objects/signaturit__SIG_ObjectSettings__mdt.object
<CustomObject>
    <description>Custom object settings for Signaturit assistant</description>
    <fields>
        <fullName>signaturit__EmailField__c</fullName>
        <description>Field API name in the child records where the email will be grabbed</description>
        <inlineHelpText>Field API name  in the child records where the email will be grabbed</inlineHelpText>
        <label>Email field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__NameField__c</fullName>
        <description>Field API name in the child records where the Name will be grabbed</description>
        <inlineHelpText>Field API name in the child records where the Name will be grabbed</inlineHelpText>
        <label>Name field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__ObjectAPIName__c</fullName>
        <description>API name of the Salesforce object to configure</description>
        <inlineHelpText>API name of the Salesforce object to configure</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__PhoneField__c</fullName>
        <description>Field API in the child records where the phone will be grabbed</description>
        <inlineHelpText>Field API in the child records where the phone will be grabbed</inlineHelpText>
        <label>Phone field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__RelationshipName__c</fullName>
        <description>Child relationship name to fetch recipients to the signature process</description>
        <inlineHelpText>Child relationship name fetch  recipients to the signature process</inlineHelpText>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Signaturit Object Setting</label>
    <pluralLabel>Signaturit Object Settings</pluralLabel>
</CustomObject>